--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,7 @@
   top: 0;
   left: 0;
   z-index: 1;
+  width: 100%;
 }
 
 .navbar-custom {
@@ -20,3 +21,6 @@
   text-align: center;
 }
 
+@media (max-width:374px) {
+ 
+}
