--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -26,3 +26,24 @@
   font-size: 25px;
 
 }
+
+@media (max-width:374px) {
+
+  .about-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:flex-end;
+    margin-top: 90px;
+    margin-right: 20px;
+    margin-left: 20px;
+  
+  }
+
+  .txt-about{
+    color: #FEF4F4;
+    padding-top: 20px;
+    font-size: 25px;
+  
+  }
+}
