--- a/src/Pages/Contact/Contact.css
+++ b/src/Pages/Contact/Contact.css
@@ -87,3 +87,10 @@
 .icon-colour {
   color: #F65259 !important;
 }
+
+@media (max-width:374px) {
+
+  .social-container{
+    display: flex;
+  }
+}
