--- a/src/components/Inicio/Inicio.css
+++ b/src/components/Inicio/Inicio.css
@@ -40,6 +40,10 @@
   color:#F65151
 }
 
+.box{
+  background: none;
+  text-align:  center;
+}
 
 .emoji{
   display: inline-block;
@@ -97,7 +101,7 @@
   .title {
     display: flex;
     align-items: center;
-    padding-top: 15vh;
+    padding-top: 7vh;
     padding-bottom: 3vh;
 
   }
